sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: illegal start of simple expression
		var test:Boolean =true;
                ^AlgBubbleSort3:17: error: Unmatched closing brace '}' ignored here
}
^